          06-10-25  Bfo     os9exec_nt  : error dump ONLY with dbgAnomaly (which is on by default)
          06-10-25  Bfo     debug/
                            0s9exec_nt  : div 0 will be masked with TRAP 5 instead of error 105
          06-10-29  Bfo     consio      : "ConsGetC" for MacOS9 repaired (again) /
                                          Some commented old things removed
          06-10-29  Bfo     debug       : Adapted texts for "-dh" output
          06-10-29  Bfo     funcdispatch: <l2.hw_location> will be written only when changed
    3.34  06-11-??  Bfo
    -------------------  
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes
    -   Deadlocking MGR when too small DEFAULTPTYSZ 

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on Linux (over network)
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   "OS9Boot" will be loaded by name, not by reference on RBF images
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/